malloc, sizeof, single hit string io

--- a/cheat/makefile
+++ b/cheat/makefile
@@ -14,12 +14,13 @@ all:
 	$(CC) user_input.c -o user_input$(OUT_EXT)
 	$(CC) test.c -o test$(OUT_EXT)
 	$(CC) cstrings.c -o cstrings$(OUT_EXT)
+	$(CC) file_io.c -o file_io$(OUT_EXT)
 	$(CXX) cpp_cheat.cpp -o cpp_cheat$(OUT_EXT)
 
 #WARNING: IF OUT_EXT == "", you are going to DELETE ALL YOUR FILES!!!!!
 #find . -iname "*$(OUT_EXT)" -delete 
 clean:
-	rm -rf *$(OUT_EXT) *.o *.s
+	rm -rf *$(OUT_EXT) *.o *.s *.tmp
 
 ### sample from: http://mrbook.org/tutorials/make/ ###
 # I am a comment, and I want to say that the variable CC will be
