--- a/opengl/texture/makefile
+++ b/opengl/texture/makefile
@@ -1,7 +1,8 @@
-CC=gcc -Wall -Wno-unused-variable -Wno-unused-but-set-variable
+CC=g++
+LIBS=-lglut -lGLU -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_flann -lm
 #compile command
 
-IN_EXT=.c
+IN_EXT=.cpp
 #extension of input files
 
 IN_DIR=./
@@ -10,7 +11,7 @@ IN_DIR=./
 OUT_DIR=_out/
 #dir where output files such as .pdf will be put. slash terminated.
 
-OUT_EXT=.out
+OUT_EXT=
 #extension of output
 
 INS=$(wildcard $(IN_DIR)*$(IN_EXT))
@@ -20,14 +21,16 @@ OUTS=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
 
 .PHONY: all mkdir clean
 
+run: all
+	./"$(OUTS)"
+
 all: mkdir $(OUTS)
 
 $(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%$(IN_EXT)
-
-	$(CC) -o "$@" "$<"
+	$(CC) -o "$@" "$<" $(LIBS)
 
 mkdir:
 	mkdir -p "$(OUT_DIR)"
 
 clean:
-	rm -rf $(OUT_DIR) $(AUX_DIR)
+	rm -rf $(OUT_DIR) $(SAUX_DIR)
