attempting offscreen rendering, but not yet. Added glInfo by song ho ahn

--- a/opengl/makefile
+++ b/opengl/makefile
@@ -1,33 +1,25 @@
 CC=gcc
 LIBS=-lglut -lGLU
-#compile command
-
 INCLUDES=-I/usr/include/GL
-#ubuntu path
 
 IN_EXT=.cpp
-#extension of input files
-
 IN_DIR=./
-#directory from which input files come. slash termianted.
-
 OUT_DIR=_out/
-#dir where output files such as .pdf will be put. slash terminated.
-
 OUT_EXT=
-#extension of output
 
 INS=$(wildcard $(IN_DIR)*$(IN_EXT))
-INS_NODIR=$(notdir $(INS))
-OUTS_NODIR=$(patsubst %$(IN_EXT),%$(OUT_EXT),$(INS_NODIR))
-OUTS=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
+OUT=$(OUT_DIR)cheat$(OUT_EXT)
 
 .PHONY: all mkdir clean
 
-all: mkdir $(OUTS)
+all: mkdir $(OUT)
 
-$(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%$(IN_EXT)
-	$(CC) $(INCLUDES) -o "$@" "$<" $(LIBS)
+run: all
+	$(OUT_DIR)cheat$(OUT_EXT)
+
+$(OUT): $(INS)
+	echo $(OUT)
+	$(CC) $(INCLUDES) -o "$@" $^ $(LIBS)
 
 mkdir:
 	mkdir -p "$(OUT_DIR)"
