--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+_gitignore/
+#docs, examples, tests
+
 _out/
-_ignore/
+#output files: bins/.so/.a
+
+_tmp/
+#intermediate compilation files: .o
 
 # Compiled Object files
 *.slo
