--- a/cheat/makefile
+++ b/cheat/makefile
@@ -27,7 +27,9 @@ CPP_OUTS:=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
 all: mkdir $(C_OUTS) $(CPP_OUTS)
 
 run: all
-	./$(OUT_DIR)c$(OUT_EXT)
+	#./$(OUT_DIR)c$(OUT_EXT)
+	#./$(OUT_DIR)cpp$(OUT_EXT)
+	./$(OUT_DIR)func$(OUT_EXT)
 
 mkdir:
 	mkdir -p "$(OUT_DIR)"
