--- a/makefile.individual_out_bins
+++ b/makefile.individual_out_bins
@@ -27,7 +27,7 @@ CPP_OUTS:=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
 all: mkdir $(C_OUTS) $(CPP_OUTS)
 
 run: all
-	./$(OUT_DIR)c$(OUT_EXT)
+	./$(OUT_DIR)c$(OUT_EXT) $(RUN_ARGS)
 
 mkdir:
 	mkdir -p "$(OUT_DIR)"
