--- a/makefile.single_out
+++ b/makefile.single_out
@@ -1,21 +1,23 @@
 #compiles all files in current dir into a single output file
 
-CC=g++
-LIBS=-lglut -lGLU -lGL
-INCLUDE_DIRS=-I/usr/include/GL
+override AUX_DIR?=_aux/
+override AUX_EXT?=.o
+override CC?=g++
+override CFLGS?=-O3 #-p -pg
+override IN_EXT?=.cpp
+override IN_DIR?=./
+override INCLUDE_DIRS?=-I/usr/include/GL
+override LIBS?=-lglut -lGLU -lGL
+override PREDEF?=#-DDEBUG -DPROFLING -DWINDOWS 				#preprocessor defines
+override RUN_ARGS?=#0 1																#passed as command line args to bin on run
+override OUT_DIR?=_out/
+override OUT_EXT?=
 
-IN_EXT=.cpp
-IN_DIR=./
-AUX_DIR=_aux/
-AUX_EXT=.o
-OUT_DIR=_out/
-OUT_EXT=
-
-INS=$(wildcard $(IN_DIR)*$(IN_EXT))
+INS:=$(wildcard $(IN_DIR)*$(IN_EXT))
 INS_NODIR:=$(notdir $(INS))
 AUXS_NODIR:=$(patsubst %$(IN_EXT),%$(AUX_EXT),$(INS_NODIR))
-AUXS=$(addprefix $(AUX_DIR),$(AUXS_NODIR))
-OUT=$(OUT_DIR)cheat$(OUT_EXT)
+AUXS:=$(addprefix $(AUX_DIR),$(AUXS_NODIR))
+OUT:=$(OUT_DIR)cheat$(OUT_EXT)
 
 .PHONY: all clean mkdir run 
 
@@ -28,7 +30,7 @@ $(OUT): $(AUXS)
 	$(CC) $^ -o "$@" $(LIBS)
 
 $(AUX_DIR)%$(AUX_EXT): $(IN_DIR)%$(IN_EXT)
-	$(CC) $(INCLUDE_DIRS) -c "$<" -o "$@"
+	$(CC) $(PREDEF) $(INCLUDE_DIRS) $(CFLAGS) -c "$<" -o "$@"
 
 mkdir:
 	mkdir -p "$(AUX_DIR)"
