added gdb debug to makefiles, glib and ansi info to c.c

--- a/cheat/makefile
+++ b/cheat/makefile
@@ -3,7 +3,7 @@
 CC := gcc
 CXX := g++
 
-CFLAGS := -Wall -Wno-unused-variable -Wno-unused-but-set-variable -std=c99
+CFLAGS := -Wall -Wno-unused-variable -Wno-unused-but-set-variable -std=c1x
 CXXFLAGS := -Wall -Wno-unused-variable -Wno-unused-but-set-variable -std=c++0x
 
 LIBS:=
@@ -23,26 +23,38 @@ OUTS_NODIR:=$(patsubst %.cpp,%$(OUT_EXT),$(INS_NODIR))
 CPP_OUTS:=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
 
 #default basename without extension to run if RUN not given
-#override RUN?=c
-override RUN?=func
+override RUN?=c
+#override RUN?=func
 #override RUN?=cpp
+override DEBUG_DEFINE?=
+override DEBUG_FLAGS?=
+override PROFILE_DEFINE?=
+override PROFILE_FLAGS?=
 
 RUN_PATH:=$(OUT_DIR)$(RUN)$(OUT_EXT)
 
-PROFILE_FLAGS:=
-OPTIMIZE_FLAGS:=-O3
+override OPTIMIZE_FLAGS?=-O3
 
 .PHONY: all mkdir clean profile set_profile_flags
 
 all: mkdir $(C_OUTS) $(CPP_OUTS)
 
+debug: clean set_debug_flags all
+	gdb $(RUN_PATH)
+
+set_debug_flags:
+	$(eval override DEBUG_FLAGS := -ggdb3)
+	$(eval override DEBUG_DEFINE := -DDEBUG)
+	$(eval override OPTIMIZE_FLAGS := -O0)
+
 profile: clean set_profile_flags all run
 	mv -f gmon.out $(OUT_DIR)
-	gprof $(RUN_PATH) $(OUT_DIR)gmon.out
+	gprof -b $(RUN_PATH) $(OUT_DIR)gmon.out
 
 set_profile_flags:
-	$(eval PROFILE_FLAGS := -p -pg)
-	$(eval OPTIMIZE_FLAGS := )
+	$(eval override PROFILE_FLAGS := -p -pg)
+	$(eval override PROFILE_DEFINE := -DPROFILE)
+	$(eval override OPTIMIZE_FLAGS := -O0)
 
 run: all
 	./$(RUN_PATH)
@@ -51,10 +63,10 @@ mkdir:
 	mkdir -p "$(OUT_DIR)"
 
 $(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.c
-	$(CC) $(OPTIMIZE_FLAGS) $(PROFILE_FLAGS) $(CFLAGS) -o "$@" "$<" $(LIBS)
+	$(CC) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(DEBUG_DEFINE) $(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(CFLAGS) -o "$@" "$<" $(LIBS)
 
 $(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.cpp
-	$(CXX) $(OPTIMIZE_FLAGS) $(PROFILE_FLAGS) $(CXXFLAGS) -o "$@" "$<" $(LIBS)
+	$(CXX) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(DEBUG_DEFINE) $(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(CXXFLAGS) -o "$@" "$<" $(LIBS)
 
 clean:
 	rm -rf "$(OUT_DIR)"
