--- a/cheat/makefile
+++ b/cheat/makefile
@@ -3,8 +3,8 @@
 CC := gcc
 CXX := g++
 
-CFLAGS := -Wall -Wno-unused-variable -Wno-unused-but-set-variable -std=c1x
-CXXFLAGS := -pthread -Wall -Wno-unused-variable -Wno-unused-but-set-variable -std=c++0x
+CFLAGS := -Wall -Wno-unused-variable -Wno-unused-but-set-variable -march=native -std=c99 -pedantic-errors
+CXXFLAGS := -pthread -Wall -Wno-unused-variable -Wno-unused-but-set-variable -march=native -std=c++0x -pedantic-errors
 
 LIBS:=
 
@@ -12,26 +12,35 @@ IN_DIR:=./
 OUT_DIR:=_out/
 OUT_EXT:=.out
 
-INS:=$(wildcard $(IN_DIR)*.c)
+EXT:=.c
+INS:=$(wildcard $(IN_DIR)*$(EXT))
 INS_NODIR:=$(notdir $(INS))
-OUTS_NODIR:=$(patsubst %.c,%$(OUT_EXT),$(INS_NODIR))
+OUTS_NODIR:=$(patsubst %$(EXT),%$(OUT_EXT),$(INS_NODIR))
 C_OUTS:=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
 
-INS:=$(wildcard $(IN_DIR)*.cpp)
+EXT:=.cpp
+INS:=$(wildcard $(IN_DIR)*$(EXT))
 INS_NODIR:=$(notdir $(INS))
-OUTS_NODIR:=$(patsubst %.cpp,%$(OUT_EXT),$(INS_NODIR))
+OUTS_NODIR:=$(patsubst %$(EXT),%$(OUT_EXT),$(INS_NODIR))
 CPP_OUTS:=$(addprefix $(OUT_DIR),$(OUTS_NODIR))
 
-#default basename without extension to run if RUN not given
+override ASSEMBLER_BASENAME?=c.c
+#override ASSEMBLER_FILE?=cpp.cpp
+
 override RUN?=c
 #override RUN?=func
 #override RUN?=cpp
+
+override ASSEMBLE_EXT?=.c
+#override ASSEMBLE_EXT?=.cpp
+
 override DEBUG_DEFINE?=
 override DEBUG_FLAGS?=
 override PROFILE_DEFINE?=
 override PROFILE_FLAGS?=
 
 RUN_PATH:=$(OUT_DIR)$(RUN)$(OUT_EXT)
+ASSEMBLE_BASENAME:=$(RUN)$(ASSEMBLE_EXT)
 
 #override OPTIMIZE_FLAGS?=-O3
 override OPTIMIZE_FLAGS?=
@@ -41,8 +50,12 @@ override OPTIMIZE_FLAGS?=
 
 all: mkdir $(C_OUTS) $(CPP_OUTS)
 
+assembler: mkdir $(IN_DIR)$(ASSEMBLER_BASENAME)
+	$(eval override OPTIMIZE_FLAGS := -O0)
+	$(CC) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(DEBUG_DEFINE) $(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(CFLAGS) -S "$(IN_DIR)$(ASSEMBLE_BASENAME)" -o "$(OUT_DIR)$(ASSEMBLE_BASENAME).s"
+
 debug: clean set_debug_flags all
-	gdb $(RUN_PATH)
+	gdb "$(RUN_PATH)"
 
 set_debug_flags:
 	$(eval override DEBUG_FLAGS := -ggdb3)
@@ -51,24 +64,24 @@ set_debug_flags:
 
 profile: clean set_profile_flags all run
 	mv -f gmon.out $(OUT_DIR)
-	gprof -b $(RUN_PATH) $(OUT_DIR)gmon.out
+	gprof -b $(RUN_PATH) $(OUT_DIR)gmon.out | tee "$(RUN_PATH).profile_out" | less
 
 set_profile_flags:
 	$(eval override PROFILE_FLAGS := -p -pg)
 	$(eval override PROFILE_DEFINE := -DPROFILE)
-	$(eval override OPTIMIZE_FLAGS := -O0)
+	#$(eval override OPTIMIZE_FLAGS := -O0)
 
 run: all
 	./$(RUN_PATH)
-	
+
 mkdir:
 	mkdir -p "$(OUT_DIR)"
+
+clean:
+	rm -rf "$(OUT_DIR)"
 
 $(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.c
 	$(CC) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(DEBUG_DEFINE) $(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(CFLAGS) -o "$@" "$<" $(LIBS)
 
 $(OUT_DIR)%$(OUT_EXT): $(IN_DIR)%.cpp
 	$(CXX) $(PROFILE_DEFINE) $(PROFILE_FLAGS) $(DEBUG_DEFINE) $(DEBUG_FLAGS) $(OPTIMIZE_FLAGS) $(CXXFLAGS) -o "$@" "$<" $(LIBS)
-
-clean:
-	rm -rf "$(OUT_DIR)"
