--- a/makefile.single_out
+++ b/makefile.single_out
@@ -1,17 +1,19 @@
+#!metadata: featured
+
 #compiles all files in current dir into a single output file
 
-override ASSEMBLE_BASENAME?=a.c			#basename of the file to generate assembly code for
+override ASSEMBLE_BASENAME?=a.c												#basename of the file to generate assembly code for
 override AUX_DIR?=_aux/
 override AUX_EXT?=.o
 override CC?=g++
-override CFLGS?=-Wall -std=c99 -pedantic-errors
+override CFLGS?=-Wall -std=c++0x -pedantic-errors
 override DEBUG_DEFINE?=
 override DEBUG_FLAGS?=
-override DEFINES=#-DPOSIX #for -DDEBUG and -DPROFILE, used dedicated DEFINES
+override DEFINES=#-DPOSIX 														#for -DDEBUG and -DPROFILE, used dedicated DEFINES
 override IN_EXT?=.cpp
 override IN_DIR?=./
 override INCLUDE_DIRS?=-I/usr/include/GL
-override LIBS?=-lglut -lGLU -lGL
+override LIBS?=#-lglut -lGLU -lGL
 override PREDEF?=#-DDEBUG -DPROFILE -DWINDOWS 				#preprocessor defines
 override RUN_ARGS?=#0 1																#passed as command line args to bin on run
 override OPTIMIZE_FLAGS:=-O3
@@ -27,7 +29,7 @@ AUXS_NODIR:=$(patsubst %$(IN_EXT),%$(AUX_EXT),$(INS_NODIR))
 AUXS:=$(addprefix $(AUX_DIR),$(AUXS_NODIR))
 OUT:=$(OUT_DIR)$(OUT_BASENAME)$(OUT_EXT)
 
-.PHONY: all mkdir clean assembler debug set_debug_flags profile set_profile_flags help ubuntu_deps
+.PHONY: all mkdir clean assembler debug set_debug_flags profile set_profile_flags help install_ubuntu_deps
 
 all: mkdir $(OUT)
 
@@ -68,12 +70,12 @@ mkdir:
 clean:
 	rm -rf $(AUX_DIR) $(OUT_DIR)
 
-ubuntu_deps:
+install_ubuntu_deps:
 	sudo aptitude install -y libgtk-3-dev
 
 help:
 	@echo 'sample calls:'
-	@echo '  ubuntu_deps'
+	@echo '  install_ubuntu_deps'
 	@echo '    #installs dependencies on Ubuntu'
 	@echo '  make'
 	@echo '  make clean'
