corrected git mess

--- a/cheat/multifile/makefile
+++ b/cheat/multifile/makefile
@@ -1,16 +1,17 @@
+CFLGS := -Wall
+
 .PHONY: all clean run 
 
-all: maina.out mainso.out mainso_fullpath.out libab.so
+all: maina.elf mainso.elf mainso_fullpath.elf libab.so
 
-#run both mains
-run: maina.out mainso.out mainso_fullpath.out
-	./maina.out
-	#./mainso.out
+run: maina.elf mainso.elf mainso_fullpath.elf
+	./maina.elf
+	#./mainso.elf
 		#this works only after install target
 		#and is the standard production method
-	env LD_LIBRARY_PATH=.:$LD_LIBRARY_PATH ./mainso.out
+	env LD_LIBRARY_PATH=.:$LD_LIBRARY_PATH ./mainso.elf
 		#this is only a test method
-	./mainso_fullpath.out
+	./mainso_fullpath.elf
 		#full path is stored in the elf
 		#since it starts with './', linker knows it is an abs path
 
@@ -22,55 +23,42 @@ install:
 
 #main to link to .so
 #readelf -d shows that the ouptut stores the relative path
-mainso.out: main.o libab.so c.o
-	g++ -L"." main.o -o mainso.out c.o -lab
+mainso.elf: main.o libab.so
+	gcc $(CFLGS) -L"." main.o -o mainso.elf -lab
 		#will look for lib with basename *exactly* ``libab.so``,
 		#``libab.so.1`` will not do!
-	#g++ -L"." main.o -o mainso.out -l:libab.so
+	#gcc $(CFLGS) -L"." main.o -o mainso.elf -l:libab.so
 		#with ':' uses full basename
 		#APPLICATION
 		#select an specific version such as ``libab.so.1``
-	#env LIBRARY_PATH=$LIBRARY_PATH:. g++ main.cpp -o mainso.out -lab
+	#env LIBRARY_PATH=$LIBRARY_PATH:. gcc $(CFLGS) main.c -o mainso.elf -lab
 
 #this is not recommended
-#better use linker path as in mainso.out
+#better use linker path as in mainso.elf
 #readelf -d shows that the ouptut stores the full path
-mainso_fullpath.out: main.o libab.so c.o
-	g++ main.o "$(shell realpath libab.so)" c.o -o mainso_fullpath.out
-	#g++ main.o -o mainso_fullpath.out -l"$(shell realpath libab.so)" 
+mainso_fullpath.elf: main.o libab.so
+	gcc $(CFLGS) main.o "$(shell realpath libab.so)" -o mainso_fullpath.elf
+	#gcc $(CFLGS) main.o -o mainso_fullpath.elf -l"$(shell realpath libab.so)" 
 		#does not work
 
 #main with .a
-maina.out: main.o ab.a c.o
-	g++ main.o ab.a c.o -o maina.out
-
-#fortran TODO get thit to work
-#maina.out: main.o ab.a c.o f.o
-	#g++ main.o ab.a c.o f.o -o maina.out
+maina.elf: main.o ab.a
+	gcc $(CFLGS) main.o ab.a -o maina.elf
 
 #make .so
 libab.so: a.o b.o
-	g++ -shared a.o b.o -o libab.so
-	#g++ -shared -Wl,-soname,libab.so a.o b.o -o libab.so
+	gcc $(CFLGS) -shared a.o b.o -o libab.so
+	#gcc $(CFLGS) -shared -Wl,-soname,libab.so a.o b.o -o libab.so
 
 #make .a
 ab.a: a.o b.o
 	ar rcs ab.a a.o b.o
 
 #first compile the object files
-#this way, if a cpp file does not change,
+#this way, if a c file does not change,
 #the corresponding .o file does not get recompiled!
-%.o: %.cpp
-	g++ -fPIC -c "$<" -o "$@"
-
-c.o: c.c
-	g++ -c "$<" -o "$@"
-	#gcc -c "$<" -o "$@"
-		#fails
-		#why?
-
-f.o: f.f
-	gfortran -c "$<" -o "$@"
+%.o: %.c
+	gcc $(CFLGS) -fPIC -c "$<" -o "$@"
 
 clean:
-	rm -rf *.o *.a *.so *.out
+	rm -rf *.o *.a *.so *.elf
